1、login flow 2、add redis

--- a/app-api/src/main/resources/application.properties
+++ b/app-api/src/main/resources/application.properties
@@ -7,3 +7,29 @@ jdbc.host=localhost:3306
 jdbc.url=jdbc:mysql://${jdbc.host}/${jdbc.name}?useUnicode=true&characterEncoding=utf8
 jdbc.username=root
 jdbc.password=root
+
+#访问地址
+redis.addr=localhost
+#访问端口
+redis.port=6379
+#授权密码，有没有这一项取决于要连接的redis服务是否设置了此项
+#redis.auth=test123
+#<!-- 控制一个pool可分配多少个jedis实例 -->
+redis.maxTotal=1024
+#最大空闲数，数据库连接的最大空闲时间。超过空闲时间，数据库连接将被标记为不可用，然后被释放。设为0表示无限制。
+redis.maxIdle=200
+#最大建立连接等待时间。如果超过此时间将接到异常。设为-1表示无限制。
+redis.maxWait=10000
+#<!-- 多长时间检查一次连接池中空闲的连接 -->
+redis.timeBetweenEvictionRunsMillis=30000
+#<!-- 空闲连接多长时间后会被收回, 单位是毫秒 -->
+redis.minEvictableIdleTimeMillis=30000
+
+#在borrow一个jedis实例时，是否提前进行alidate操作；如果为true，则得到的jedis实例均是可用的；
+redis.testOnBorrow=true
+#<!-- 当调用return Object方法时，是否进行有效性检查 -->
+redis.testOnReturn=true
+#当客户端闲置多长时间后关闭连接，如果指定为0，表示关闭该功能
+redis.timeout=10000
+
+redis.testWhileIdle=true
