--- a/build.gradle
+++ b/build.gradle
@@ -68,6 +68,7 @@ subprojects {
                 "org.hibernate:hibernate-validator:$hibernateValidatorVersion",
                 //logger begin slf4j门面+log4j实现
                 "org.slf4j:slf4j-api:$slf4jVersion",
+//                "org.slf4j:slf4j-log4j12:$slf4jVersion",
                 "org.apache.logging.log4j:log4j-api:$log4jVersion",
                 "org.apache.logging.log4j:log4j-core:$log4jVersion",
 //                <!--用于与slf4j保持桥接-->
