--- a/service/src/main/resources/generatorjdbc.properties
+++ b/service/src/main/resources/generatorjdbc.properties
@@ -3,5 +3,5 @@ jdbc.validationQuery=SELECT 1
 jdbc.name=testmybatis
 jdbc.host=localhost:3306
 jdbc.url=jdbc:mysql://${jdbc.host}/${jdbc.name}?useUnicode=true&characterEncoding=utf8
-jdbc.username=root
+jdbc.userName=root
 jdbc.password=root
